# HASI

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  itk-module.cmake  normalizedPoseMesh.cxx  pyproject.toml  registerAndTransferLabels.cxx  segmentBonesInMicroCT.cxx  setup.py  tester.cpp
.github/workflows/: build-test-package.yml  test-python-hasi.yml
Data/: boneMorphometry.cmd  createMeshes.cmd  regAll.cmd
Jupyter/: 0_HelloRegistrationWorld.ipynb  requirements.txt  run.cmd  webRegistration.ipynb  webRegistration.py
doc/: WBIR2020-graphical-abstract.pptx  WBIR2020_abstract.doc
examples/: CMakeLists.txt  MeshToMeshRegistration.ipynb  MouseFemurMicroCT.ipynb  MouseFemurMicroCTApp.ipynb  ResampleAxisAligned.ipynb  ShapeAnalysis.ipynb  TemplateGenerationIterative.ipynb  normalizedPoseMesh.cxx  registerAndTransferLabels.cxx  requirements.txt  resampleAxisAligned.cxx  segmentBonesInMicroCT.cxx
include/: itkLandmarkAtlasSegmentationFilter.h  itkLandmarkAtlasSegmentationFilter.hxx  itkMinimalStandardRandomVariateGenerator.h  itkSegmentBonesInMicroCTFilter.h  itkSegmentBonesInMicroCTFilter.hxx
src/: CMakeLists.txt
src/hasi/: mouse_femur_tibia_ct_morphometry.py  pyproject.toml  test_align.py  test_integration.py  test_meshtomeshregistration.py  test_oai.py  test_registrars.py
src/hasi/hasi/: __init__.py  align.py  classify.py  diffeoregistrar.py  meansquaresregistrar.py  meshtomeshregistrar.py  pointsetentropyregistrar.py
src/registration/: diffeoregistrar.py  meansquaresregistrar.py
test/: CMakeLists.txt  itkLandmarkAtlasSegmentationFilterTest.cxx  itkSegmentBonesInMicroCTFilterTest.cxx  test_meshtomeshregistration.py
test/Baseline/: 901-L-A.nrrd.sha512  901-L-label.nrrd.sha512
test/Input/: 901-L.fcsv.sha512  901-L.nrrd.sha512  907-L-atlas.nrrd.sha512  907-L.fcsv.sha512  907-L.nrrd.sha512
wrapping/: CMakeLists.txt  itkLandmarkAtlasSegmentationFilter.wrap  itkSegmentBonesInMicroCT.wrap  itkSegmentBonesInMicroCTFilter.wrap
wrapping/test/: CMakeLists.txt
www/: .editorconfig  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
www/src/: SelectController.ts  accordion-layout.ts  biomarker-chart.ts  biomarker-charts.ts  biomarker-picker.ts  feature-bar.ts  feature-scans.ts  hasi-app.ts  index.css  individual-root.ts  nav-menu.ts  pages.ts  plot-params.ts  plot.store.ts  population-root.ts  processing-root.ts  scan-table.ts  scan-view.ts  scan-views.ts  scan.types.ts  top-app-bar.ts  upload-pick.ts  upload-preview.ts  upload-progress.ts  upload-scans.ts
www/src/state/: hasi.machine.ts  scan-selection.ts  scan-selections.ts
www/src/utils/: SelectController.ts  SelectState.ts  select-controller.ts  select-state.ts
www/types/: hasi-app.d.ts
